--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ function runFiltrr() {
     </li>
   	<li class='slide'>
     <h3>Design and Styling - Twitter Bootstrap</h3>
-    <p>twitter-bootstrap-rails provides generators and easy integration</p>
+    <p>twitter-bootstrap-rails provides generators and easy integration. Lot o' Themes.</p>
   	</li>
   	<li class='slide'>
     <h3>Forms - Formtastic + formtastic-bootstrap</h3>
@@ -342,14 +342,21 @@ function runFiltrr() {
 </article>
 
 <article class='slide slide-list'>
+  <h1>New</h1>
+<code><pre style='text-align:left;'>
+rails new proto -T -O --skip-bundle
+</pre></code>
+</article>
+
+<article class='slide slide-list'>
   <h1>Gemfile</h1>
   <code><pre style='text-align:left;'>
-# In Assets
-gem "therubyracer"
-gem "less-rails"
-gem "twitter-bootstrap-rails"
 ...
-
+# In Assets
+  gem "therubyracer"
+  gem "less-rails"
+  gem "twitter-bootstrap-rails", "2.1.3"
+end
 
 gem 'jquery-rails'
 gem 'mongoid'
@@ -373,13 +380,6 @@ gem 'rails_admin'
 </article>
 
 <article class='slide slide-list'>
-  <h1>New</h1>
-<code><pre style='text-align:left;'>
-rails new proto -T -O --skip-bundle
-</pre></code>
-</article>
-
-<article class='slide slide-list'>
   <h1>Config</h1>
   <code><pre style='text-align:left;'>
 # in config/application.rb
@@ -391,7 +391,7 @@ end
 </article>
 
 <article class='slide slide-list'>
-  <h1>Generate up all the things</h1>
+  <h1>Generate all the things</h1>
 <code><pre style='text-align:left;'>
 # Mongoid 
 rails generate mongoid:config
@@ -411,7 +411,6 @@ rails g controller Page home
 # Devise w/ Mongoid
 rails generate devise:install
 rails generate devise User
-rails generate devise Admin
 
 # Create a Resource (we'll do contacts)
 rails g resource contacts name:string email:string phone:string
@@ -499,6 +498,28 @@ belongs_to :user, index: true
       Backbone.history.start();
     });
 </pre></code>
+</article>
+
+<article class='slide slide-list'>
+  <h1>Generate An Admin Console</h1>
+  <p>Don't forget to turn off "Registerable" in your Admin model after you create your first user.</p>
+<code><pre style='text-align:left;'>
+rails g rails_admin:install
+</pre></code>
+
+</article>
+
+
+<article class='slide slide-list'>
+  <h1>And you're done! Except...</h1>
+  <ul>
+    <li class='slide'><h3>Themes <a href='http://bootswatch.com/#gallery'>Bootswatch</a> (Free) <a href='https://wrapbootstrap.com/'>Wrapbootstrap</a> (Paid)</h3></li>
+    <li class='slide'><h3>Your Content</h3></li>
+    <li class='slide'><h3>Some Navigation</h3></li>
+    <li class='slide'><h3>Your App</h3></li>
+  </ul>
+</pre></code>
+
 </article>
 
 
